# desafio-dynaccurate-backend

./: .env.example  .gitignore  Procfile  pyproject.toml  railway.json  readme.md  requirements.txt
.docker/: .dockerignore  Dockerfile  docker-compose.yaml  entrypoint.sh  wait-for-it.sh
src/application/repositories/: medicament_repository.py
src/application/usecases/medicaments/: create_medicament.py  delete_medicament.py  find_all_medicament.py  find_medicament_by_id.py  update_medicament.py  upload_image_to_medicament.py
src/domain/entities/: medicament.py
src/infrastructure/database/prisma/: prisma_connection.py  schema.prisma
src/infrastructure/database/prisma/mappers/: prisma_medicament_mapper.py
src/infrastructure/database/prisma/repositories/: prisma_medicament_repository.py
src/infrastructure/http/: server.py
src/infrastructure/http/controllers/: medicament_controller.py  test.py
src/infrastructure/http/dtos/: create_medicament_dto.py  update_medicament_dto.py
src/infrastructure/http/viewModels/: medicaments_view_models.py
tests/repositories/: in_memory_database_repository.py
